BottomNavBar base code

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "triptekker",
-    "short_name": "triptekker",
+    "name": "swiss_knife_couteau",
+    "short_name": "swiss_knife_couteau",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
