--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\domin\\AppData\\Local\\Android\\Sdk
-flutter.sdk=C:\\src\\flutter
+sdk.dir=C:\\Users\\alexm\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter_windows_3.10.3-stable\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.5.0
