--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\src\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\domin\Documents\PROGRAMACION\flutter\swiss_knife\swiss_knife_couteau
+FLUTTER_ROOT=C:\src\flutter_windows_3.10.3-stable\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\alexm\OneDrive\Documentos\6to cuatrimestre de clases itla tareas\Programacion Movil\TripTrikker ver2\TripTrekker
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.5.0
