--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,6 @@
-sdk.dir=C:\\Users\\domin\\AppData\\Local\\Android\\Sdk
-flutter.sdk=C:\\src\\flutter
+# sdk.dir=C:\\Users\\domin\\AppData\\Local\\Android\\Sdk
+# flutter.sdk=C:\\src\\flutter
+sdk.dir=C:\\Users\\victo\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.5.0
