--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
 sdk.dir=C:\\Users\\domin\\AppData\\Local\\Android\\Sdk
 flutter.sdk=C:\\src\\flutter
-flutter.buildMode=debug
-flutter.versionName=1.5.0
+flutter.buildMode=release
+flutter.versionName=2.0.0
