bottomAppBar fix - arreglado boton de ventana activa y arreglado el aprovechamiento de pantalla completa

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
 sdk.dir=C:\\Users\\domin\\AppData\\Local\\Android\\Sdk
 flutter.sdk=C:\\src\\flutter
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=2.0.0
