--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,15 +27,16 @@ dependencies:
   camera: ^0.10.5+3
   path_provider: ^2.1.0
   gallery_saver: ^2.3.2
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
   provider: ^5.0.0
+  permission_handler:
+  intl: ^0.18.1
+  path: ^1.8.0
+  sqflite: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  hive_generator: ^2.0.0
   build_runner: ^2.4.6
 
 
