--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\alexm\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter_windows_3.10.3-stable\\flutter
+sdk.dir=C:\\Users\\victo\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\flutter
 flutter.buildMode=release
 flutter.versionName=2.5.0
