--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
 sdk.dir=C:\\Users\\victo\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\flutter
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=2.5.0
