--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\domin\\AppData\\Local\\Android\\Sdk
-flutter.sdk=C:\\src\\flutter
-flutter.buildMode=debug
+sdk.dir=C:\\Users\\victo\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\flutter
+flutter.buildMode=release
 flutter.versionName=2.0.0
