--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   intl: ^0.18.1
   path: ^1.8.0
   sqflite: ^2.0.0
+  geolocator: ^9.0.1
+  flutter_google_places: ^0.3.0
+  awesome_snackbar_content: ^0.0.8
 
 dev_dependencies:
   flutter_test:
