--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
 sdk.dir=C:\\Users\\alexm\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\src\\flutter_windows_3.10.3-stable\\flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=2.5.0
