--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   geolocator: ^9.0.1
   flutter_google_places: ^0.3.0
   awesome_snackbar_content: ^0.0.8
+  dio: ^5.3.2
 
 dev_dependencies:
   flutter_test:
